CHANGELOG
=========

DarkElements version 3.7 - march 2016
- added file postmeta
- files archive, index, search and single: relocated postmetadata to separate file
- file style and custom-editor-style: updated html tags (thanks Tom)
- updated text strings (thanks Tom)
- several small adjustments

DarkElements version 3.6 - february 2016
- theme customizer: change menu title
- file search: post nav inside the loop
- file style: fixed alignment of next and prev post link
- several small adjustments

DarkElements version 3.4 - january 2016
- file header: removed is_home so homepage content is not displayed when using a static blog page
- several small adjustments

DarkElements version 3.3 - january 2016
- updated file style
- updated file custom-editor-style
- updated file functions

DarkElements version 3.2 - december 2015
- bugfix: included the register_default_headers again because it did not work without

DarkElements version 3.1 - december 2015
- file functions: removed register_default_headers (default header already included in after_setup_theme)
- several files: updated postmetadata
- file style: several modifications
- several small adjustments
- updated pot file

DarkElements version 3.0 - november 2015
- updated archive.php (added the_archive_title and the_archive_description)
- updated pot file
- removed translations (to support language packs from wordpress.org)
- several small adjustments

DarkElements version 2.7 - september 2015
- updated file comments
- updated pagelink
- file footer: copyrights
- file archive and index: added pagetitle when no posts are found
- changed postmetadata heading into div
- removed background color from post and page editor
- reordered mobile stylesheet
- added Swedish translation (thanks Stefan)
- updated language files
- several small adjustments

DarkElements version 2.5 - june 2015
- file page and single: fixed closing div
- file single: removed if statement 