@@ -8,12 +8,8 @@ Used to style the post and page TinyMCE editor.
 
 
 /* RESET STYLESHEET */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
-a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, 
-small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, 
-fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, 
-article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary, time, mark, audio, video {
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, ins, mark, 
+em, img, q, small, strong, sub, sup, b, dl, dt, dd, ol, ul, li, table, caption, tr, th, td {
 	margin:0;
 	padding:0;
 	border:0;
@@ -53,7 +49,7 @@ h6 {font-size:0.75em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
-a {text-decoration:none; color:#333;}
+a {text-decoration:none; color:#999;}
 a:hover {color:#e77776;}
 
 strong, b {font-weight:bold;}
