@@ -1,91 +1,84 @@
-INSTALLATION
-============
+=== DarkElements ===
+Contributors: Guido07111975
+Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
+Version: 3.8
+Requires at least: 3.7
+Tested up to: 4.4
+License: GNU General Public License v3 or later
+License URI: http://www.gnu.org/licenses/gpl-3.0.html
+Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, dark, gray, editor-style, translation-ready
+
+
+== Description ==
+DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
+
+
+== Installation ==
 1. Go to your WordPress Dashboard > Appearance > Themes.
 2. Select and install a new theme from the online WordPress Theme Directory or from your pc (zip file).
 3. Once activated, you're ready to use it.
 
+= Set hompepage =
+You can use the default homepage (displaying posts) or set a static page as homepage.
 
-HOW TO SET HOMEPAGE
-===================
-You can use the default homepage (displaying posts) or set a static page as homepage. 
 To set a static homepage go to your WordPress Dashboard > Settings > Reading and select the page you want.
 
+= Header image =
+You can change the header image via WordPress Dashboard > Appearance > Customize. 
 
-HOW TO CHANGE HEADER IMAGE
-==========================
-You can change the header-image via WordPress Dashboard > Appearance > Customize.
 You will find the recommended size there too.
 
-
-HOW TO SET LOGO
-===============
+= Logo =
 You can add your own logo in stead of blogname and description via WordPress Dashboard > Appearance > Customize.
 
-
-HOW TO CHANGE BACKGROUND
-========================
+= Background =
 You can add your own background(image) via WordPress Dashboard > Appearance > Customize.
 
-
-HOW TO SET MENU
-===============
+= Menu = 
 Theme offers a menu that can contain subpages (2 levels deep).
+
 You can create and set menu via WordPress Dashboard > Appearance > Menus.
 
-
-HOW TO CHANGE MENU TITLE
-========================
+= Menu title =
 You can change the menu title via WordPress Dashboard > Appearance > Customize.
 
 
-TRANSLATION
-===========
+== Copyright ==
+= Fonts =
+* Font: Open Sans
+* Source: http://www.google.com/fonts/specimen/Open+Sans
+* Copyright author: Steve Matteson
+* Apache License, version 2.0
+* http://www.apache.org/licenses/LICENSE-2.0.html
+
+= Scripts =
+* Script: nav.js
+* Source: http://maxfoundry.com/articles/116/responsive-mobile-navigation-in-wordpress
+* Copyright author: John Hartley
+* GNU General Public License v3 or later
+* http://www.gnu.org/licenses/gpl-3.0.html
+
+= Images =
+* Item: boats.jpg
+* Item: back.png
+* Copyright author: Guido van der Leest
+* Author URI: http://www.guidovanderleest.nl
+* GNU General Public License v3 or later
+* http://www.gnu.org/licenses/gpl-3.0.html
+
+
+== Notes ==
+= Translation =
 This theme is translation-ready and supports language packs from wordpress.org
 
-
-FONTS
-=====
-Font: Open Sans
-Source: http://www.google.com/fonts/specimen/Open+Sans
-Copyright author: Steve Matteson
-Licence: Apache License, version 2.0
-License URI: http://www.apache.org/licenses/LICENSE-2.0.html
-
-
-Scripts
-=======
-Script: nav.js
-Source: http://maxfoundry.com/articles/116/responsive-mobile-navigation-in-wordpress
-Copyright author: John Hartley
-License: GNU General Public License v3 or later
-License URI: http://www.gnu.org/licenses/gpl-3.0.html
-
-
-THEME IMAGES
-============
-Item: boats.jpg
-Item: back.png
-Copyright author: Guido van der Leest
-Author URI: http://www.guidovanderleest.nl
-License: GNU General Public License v3 or later
-License URI: http://www.gnu.org/licenses/gpl-3.0.html
-
-
-CREDITS
-=======
+= Credits =
 DarkElements is inspired by a theme called Wallbase (released under the GNU General Public License, version 2): http://www.fabthemes.com/wallbase
+
 Without the WordPress codex and help from the WordPress community I was not able to develop my theme, so: thank you!
 
-
-SUPPORT
-=======
-If you have a question or problem using this WordPress theme, please visit the WordPress Theme Directory and post a message in the Support Forum.
+= Support = 
+If you have a question or problem using this WordPress theme, please visit the WordPress Theme Directory and post a message in Support Forum.
 
 
-CHANGELOG
-=========
-See separate file called changelog
-
-
-Enjoy,
-Guido
+== Changelog == 
+See separate file called changelog.
