@@ -9,13 +9,13 @@
 
 	<?php if ( have_posts() ) : ?>
 
-		<h4 class="page-title"><?php printf( __( 'Search Results for: %s', 'darkelements' ), get_search_query() ); ?></h4>
+		<h1 class="page-title"><?php printf( __( 'Search Results for: %s', 'darkelements' ), get_search_query() ); ?></h1>
 			
 		<?php while ( have_posts() ) : the_post(); ?>
 
-			<h4 class="post-title">
+			<h2 class="post-title">
 				<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php printf(__('Permalink to %s', 'darkelements'), the_title_attribute('echo=0')); ?>"> <?php the_title(); ?></a> 
-			</h4>
+			</h2>
 
 			<?php get_template_part( 'postmeta' ); ?>
 
@@ -37,7 +37,7 @@
 		</div>
 
 		<?php else: ?>
-			<h4 class="page-title"><?php _e( 'Nothing Found', 'darkelements' ); ?></h4>
+			<h1 class="page-title"><?php _e( 'Nothing Found', 'darkelements' ); ?></h1>
 			<p><?php _e('Sorry, no posts matched your criteria.', 'darkelements'); ?></p>
 			<?php get_search_form(); ?>
 
