@@ -1,11 +1,11 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 3.7
+Version: 3.8
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
-Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, dark, light, gray, editor-style, translation-ready
+Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, dark, gray, editor-style, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: darkelements
@@ -85,7 +85,7 @@ h6 {font-size:0.75em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
-a {text-decoration:none; color:#ddd;}
+a {text-decoration:none; color:#aaa;}
 a:hover {color:#e77776;}
 
 strong, b {font-weight:bold;}
@@ -116,7 +116,7 @@ dd {margin:0 0 0 20px;}
 
 
 /* INPUTS */
-input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #444; padding:2px 5px; background:none; color:#ddd; font-size:1em; font-family:'Open Sans', sans-serif; border-radius:5px; -moz-border-radius:5px;}
+input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #444; padding:2px 5px; background:none; color:#ddd; font-size:1em; font-family:'Open Sans', sans-serif; border-radius:5px;}
 input[type="submit"], input[type="reset"], input[type="button"] {cursor:pointer; border:0; padding:2px 5px; background:#ddd; color:#333;}
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {background:#e77776; color:#ddd;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
@@ -125,13 +125,13 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* HEADER */
-#header {width:22%; float:left; padding:20px 2% 30px; background:#333 url('images/back.png'); border-bottom-left-radius:50px; -moz-border-bottom-left-radius:50px; border-bottom-right-radius:50px; -moz-border-bottom-right-radius:50px; opacity:0.9; filter:alpha(opacity=90);}
+#header {width:22%; float:left; padding:20px 2% 30px; background:#333 url('images/back.png'); border-bottom-left-radius:50px; border-bottom-right-radius:50px; opacity:0.9; filter:alpha(opacity=90);}
 
 
 /* HEADER LOGO */
 #header .logo {width:100%; text-align:center; padding:0 0 20px;}
 #header .logo h1 {font-size:2em;}
-#header .logo h4 {padding:5px 0; font-size:1.2em;}
+#header .logo h2 {padding:5px 0; font-size:1.2em;}
 #header .logo img {padding:10px 0 0;}
 
 
@@ -159,17 +159,18 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 10px;}
+.page-title {clear:both; padding:0 0 10px; font-size:1.5em; line-height:1.5em;}
+.page-title-post {clear:both; font-size:1.5em; line-height:1.5em;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
-.post-title {clear:both;}
+.post-title {clear:both; font-size:1.5em; line-height:1.5em;}
 .sticky {clear:both; display:block; text-align:center; margin:0 0 10px; padding:5px; color:#e77776; border-top:1px solid #444; border-bottom:1px solid #444;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
 .more {width:100%; clear:both; display:block; float:left; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #444;}
-a.readmore {float:right; text-decoration:none; padding:2px 5px; background:#ddd; color:#333; border-radius:5px; -moz-border-radius:5px;}
+a.readmore {float:right; text-decoration:none; padding:2px 5px; background:#ddd; color:#333; border-radius:5px;}
 a.readmore:hover {background:#e77776; color:#ddd; text-decoration:none;}
 
 
@@ -180,7 +181,7 @@ a.readmore:hover {background:#e77776; color:#ddd; text-decoration:none;}
 
 
 /* EDIT LINK */
-.edit-link {clear:both; display:block; text-align:center; margin:10px 0; padding:2px 5px; border:1px solid #444; border-radius:5px; -moz-border-radius:5px;}
+.edit-link {clear:both; display:block; text-align:center; margin:10px 0; padding:2px 5px; border:1px solid #444; border-radius:5px;}
 .edit-link a {color:#e77776;}
 .edit-link a:hover {color:#ddd;}
 
@@ -204,6 +205,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
 .gallery-caption {max-width:100%; text-align:center;}
 
+#container .gallery img {border:0;}
+
 
 /* SEARCHFORM */
 .search-form {padding:10px 0;}
@@ -213,7 +216,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* COMMENTS */
 #comments {width:100%; clear:both; float:left;}
-.comment-list {background:none; border:1px solid #444; border-radius:5px; -moz-border-radius:5px; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
+.comment-list {background:none; border:1px solid #444; border-radius:5px; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
 .comment-list ol {list-style:none;}
 .comment-list li {list-style:none; margin:0 0 0 10px;}
 .comment-body {border-left:1px solid #ddd; padding:0 0 0 15px; margin:20px 0;}
@@ -237,7 +240,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:100%; float:left;}
 .widget {padding:10px 0; margin:0 0 10px; background:none;}
-.widgettitle, .nav-widgettitle {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
+.widgettitle, .nav-widgettitle {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444; font-size:1.5em;}
 
 
 /* CALENDAR WIDGET */
@@ -250,7 +253,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* FOOTER */
 #footer {width:68%; float:right; padding:0 2%; margin:20px 0 0; background:#333 url('images/back.png'); color:#ddd; opacity:0.9; filter:alpha(opacity=90);}
-#footer .site-info {clear:both; text-align:center; font-size:0.75em; padding:10px 0;}
+#footer .site-info {clear:both; text-align:center; padding:10px 0;}
 
 
 /* FOOTER WIDGET AREA */
@@ -284,7 +287,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#header {width:100%; padding:0; background:none;}
 	#header .logo {padding:10px 0;}
 	#header .logo h1 {font-size:2em;}
-	#header .logo h4 {padding:0; font-size:1.3em;}
+	#header .logo h2 {padding:0; font-size:1.3em;}
 	#header-image {display:none;}
 	#header-image-mobile {display:block; width:100%; float:left; background:none;}
 	#header-image-mobile .header-img {width:100%; height:auto;}
@@ -298,7 +301,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.postmetadata {margin:10px 0;}
 
 	/* HEADINGS */
-	.post-title, .page-title, .widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.3em;}
+	.post-title, .page-title, .page-title-post, .widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.3em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
